# moon_tasks

./: .gitignore  README.md  pyproject.toml
moon_tasks/: auto_organize_files.py  daily_todo_list.py  find_dups.py
