[tool.poetry]
name = "moon-tasks"
version = "2024.12"
description = ""
authors = ["Todor Lubenov"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
pandas = "^2.2.3"
numpy = "^2.2.1"
six = "^1.17.0"
pytz = "^2024.2"
tzdata = "^2024.2"
requests = "^2.32.3"
urllib3 = "^2.3.0"
idna = "^3.10"
certifi = "^2024.12.14"
charset-normalizer = "^3.4.1"
pytest = "^8.3.4"
pydantic = "^2.10.4"
pydantic-core = "^2.27.2"
typing-extensions = "^4.12.2"


[tool.poetry.group.dev.dependencies]
pytest = "^8.3.4"
ruff = "^0.8.4"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
